--- a/core/animations/_wobble.scss
+++ b/core/animations/_wobble.scss
@@ -1,1 +1,26 @@
-@keyframes wobble{0%,10%{transform:translateX(0%);transform-origin:50% 50%}15%{transform:translateX(-32px) rotate(-10deg)}30%{transform:translateX(16px) rotate(10deg)}45%{transform:translateX(-16px) rotate(-5.5555555556deg)}60%{transform:translateX(9.696969697px) rotate(3.3333333333deg)}75%{transform:translateX(-5.8181818182px) rotate(-2deg)}}
+@keyframes wobble {
+    0%, 10% {
+        transform: translateX(0%);
+        transform-origin: 50% 50%;
+    }
+
+    15% {
+        transform: translateX(-32px) rotate(-10deg);
+    }
+
+    30% {
+        transform: translateX(calc(32px / 2)) rotate(10deg);
+    }
+
+    45% {
+        transform: translateX(calc(-32px / 2)) rotate(calc(-10deg / 1.8));
+    }
+
+    60% {
+        transform: translateX(calc(32px / 3.3)) rotate(calc(10deg / 3));
+    }
+
+    75% {
+        transform: translateX(calc(-32px / 5.5)) rotate(calc(-10deg / 5));
+    }
+}
