--- a/themes/osrs/style.scss
+++ b/themes/osrs/style.scss
@@ -1,4 +1,5 @@
 /* OSRS theme for Prutz profiles by GGBot */
+@forward "../../core/basics";
 @forward "base";
 @forward "./layout/index";
 @forward "./components/index";
