--- a/themes/osrs/layout/_subnav.scss
+++ b/themes/osrs/layout/_subnav.scss
@@ -100,7 +100,7 @@ $navbar-borders: 2px solid $border-brown;
                     font-size: 12px;
                     height: 15px;
                     width: 20px;
-                    margin: 0 8px;
+                    margin: -4px 8px 0 8px;
                 }
             }
 
