--- a/themes/osrs/layout/_grid.scss
+++ b/themes/osrs/layout/_grid.scss
@@ -33,6 +33,7 @@
             grid-area: subnav;
             grid-row: 2;
             grid-column: 1;
+            z-index: 2;
         }
 
         // main.scss
